fix(minor): spacing for sidebar item with child items
(cherry picked from commit 1501c5e1d38a512d394d9bde8076de1d1e9308be)

--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -1022,7 +1022,7 @@ body {
 			}
 
 			.drop-icon {
-				padding: 10px 12px 10px 2px;
+				padding: 0px 12px 0px 2px;
 			}
 
 			svg {
